# cubic

./: main.py  pyproject.toml
data/processed/: etsiaab_temp_06_25.csv
data/raw/: etsiaab_temp_06_25.csv
notebooks/: Prueba de tratamiento de datos.ipynb  Tratamiento de datos de sensores.ipynb
src/cubic/: utils.py
