[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubic"
version = "0.0.1"
description = "Fuentes para tratamiento de datos para el proyecto CUBIC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astral>=3.2",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "timezonefinder>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
