[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubic"
version = "0.0.1"
description = "Fuentes para tratamiento de datos para el proyecto CUBIC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astral>=3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scipy>=1.15.3",
    "timezonefinder>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
